<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.HomeActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:foregroundGravity=""
        android:src="@drawable/logo_my_story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_mulai"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/desc_home1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/tv_cerita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:text="@string/desc_home2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_mulai"
        app:layout_constraintTop_toBottomOf="@+id/tv_mulai" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/tv_mulai"
        app:layout_constraintTop_toBottomOf="@+id/tv_cerita" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@+id/bt_login"
        app:layout_constraintEnd_toEndOf="@+id/tv_cerita"
        app:layout_constraintTop_toTopOf="@+id/bt_login" />

</androidx.constraintlayout.widget.ConstraintLayout>